crates/oxidizer/tests/ui/async_without_runtime.stderr
error: async ffi_function requires a runtime identifier, e.g. #[ffi_function(RT)]
 --> tests/ui/async_without_runtime.rs:3:1
  |
3 | #[ffi_function]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ffi_function` (in Nightly builds, run with -Z macro-backtrace for more info)
