crates/oxidizer/tests/ui/async_without_runtime.rs
use oxidizer::ffi_function;

#[ffi_function]
async fn missing_runtime() -> u64 {
    42
}

fn main() {}
